create employee class

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 </header>
 <body>
     <div class="employeeCreator">
-        <p>Add Employee</p>
+        <p>New Employee</p>
         <input type="text" placeholder="First Name">
         <input type="text" placeholder="Last Name">
         <input type="number" placeholder="ID">
         <input type="text" placeholder="Title">
         <input type="number" placeholder="Annual Salary">
-        <button>Add Employee</button>
+        <div>
+            <button id="addEmployee">Add Employee</button>
+        </div>
     </div>
     <div class="employeeList">Employee Table
         <table class="sleekTable">
