employee class displays correctly on the DOM now

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <div class="headline">Salary Calculator</div>
 </header>
 <body>
+
     <div class="employeeCreator">
         <p>New Employee</p>
-        <input type="text" placeholder="First Name">
-        <input type="text" placeholder="Last Name">
-        <input type="number" placeholder="ID">
-        <input type="text" placeholder="Title">
-        <input type="number" placeholder="Annual Salary">
+        <input type="text" placeholder="First Name" id="firstName">
+        <input type="text" placeholder="Last Name" id="lastName">
+        <input type="number" placeholder="ID" id="id">
+        <input type="text" placeholder="Title" id="title">
+        <input type="number" placeholder="Annual Salary" id="salary">
         <div>
             <button id="addEmployee">Add Employee</button>
         </div>
     </div>
+
     <div class="employeeList">Employee Table
         <table class="sleekTable">
             <thead>
