monthly totalling seems to work now

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
             </tbody>
         </table>
     </div>
-    <div class="total">Total: $23,000</div>
+    <div class="total">Monthly Total: <span id="total">$25,000</span></div>
 </body>
 </html>
