first pass on styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Fugaz+One" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.3.1.min.js"></script>
     <script src="client.js"></script>
@@ -26,7 +27,7 @@
         </div>
     </div>
 
-    <div class="employeeList">Employee Table
+    <div class="employeeList">
         <table class="sleekTable">
             <thead>
                 <tr>
